@@ -1,0 +1,18 @@
+Exception of type: OPTION_INVALID in file "../../../../Ipopt/src/Algorithm/IpAlgBuilder.cpp" at line 275:
+ Exception message: Selected linear solver MA27 not available.
+Tried to obtain MA27 from shared library "libhsl.so", but the following error occured:
+libhsl.so: cannot open shared object file: No such file or directory
+
+EXIT: Invalid option encountered.
+Exception of type: OPTION_INVALID in file "../../../../Ipopt/src/Algorithm/IpAlgBuilder.cpp" at line 275:
+ Exception message: Selected linear solver MA27 not available.
+Tried to obtain MA27 from shared library "libhsl.so", but the following error occured:
+libhsl.so: cannot open shared object file: No such file or directory
+
+EXIT: Invalid option encountered.
+Exception of type: OPTION_INVALID in file "../../../../Ipopt/src/Algorithm/IpAlgBuilder.cpp" at line 275:
+ Exception message: Selected linear solver MA27 not available.
+Tried to obtain MA27 from shared library "libhsl.so", but the following error occured:
+libhsl.so: cannot open shared object file: No such file or directory
+
+EXIT: Invalid option encountered.
